dhall/tests/type-inference/failure/unit/CompletionMissingRequiredField.txt
Type error: error: annot mismatch: { id : Optional Natural } != { id : Optional Natural, name : Text }
 --> <current file>:1:5
  |
...
6 | in  Example::{=}
  |     ^^^^^^^^^^^^ annot mismatch: { id : Optional Natural } != { id : Optional Natural, name : Text }
  |
